--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.6"
   }
